[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x1371"
version = "0.1.0"
description = "Local-first forensic and cryptanalytic toolkit for 11B-X-1371"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "GitHub Copilot"}]
keywords = ["forensics", "cryptanalysis", "evidence", "ocr", "media"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Security",
  "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.6,<1",
]

[project.scripts]
x1371 = "x1371.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
